# ElementReactions

./: .gitignore  CMakeLists.txt  FORMULA_FORMATTING.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  UNICODE_REFERENCE.md  fix_encoding.ps1  imgui.ini  test_utf8.txt
src/main/: Compound.cpp  Compound.h  FormulaFormatter.cpp  FormulaFormatter.h  Reaction.cpp  Reaction.h  ReactionSystem.cpp  ReactionSystem.h  main.cpp
src/main/cpp/: Application.cpp  AtomicMasses.cpp  Compound.cpp  Reaction.cpp  ReactionSimulator.cpp  main.cpp  main_gui.cpp
src/main/include/: Application.h  AtomicMasses.h  Compound.h  Reaction.h  ReactionSimulator.h
src/main/resources/compounds/: TEMPLATE.md  aluminum.json  aluminum_oxide.json  ammonia.json  ammonium_chloride.json  beryllium.json  beryllium_chloride.json  beryllium_hydroxide.json  beryllium_oxide.json  boric_acid.json  boron.json  boron_oxide.json  calcium.json  calcium_hydroxide.json  carbon.json  carbon_dioxide.json  carbon_monoxide.json  carbonic_acid.json  chloric_acid.json  chlorine.json  chlorine.txt  chlorine_dioxide.json  chlorous_acid.json  dichlorine_heptoxide.json  dichlorine_monoxide.json  fluorine.json  hydrochloric_acid.json  hydrogen.json  hydrogen.txt  hydrogen_chloride.json  hydrogen_fluoride.json  hydrogen_peroxide.json  hydrogen_sulfide.json  hypochlorous_acid.json  lithium.json  lithium_chloride.json  lithium_hydroxide.json  lithium_oxide.json  magnesium.json  magnesium_chloride.json  (+46 more)
src/main/resources/reactions/: TEMPLATE.md  acid_base_neutralization.json  aluminum_oxide.json  ammonia_combustion.json  ammonia_synthesis.json  b2o3_hydrolysis.json  b2o3_naoh_reaction.json  becl2_hydrolysis.json  beo_naoh_amphoteric.json  beryllium_chlorine.json  beryllium_oxygen.json  boron_oxygen.json  calcium_reactions.json  carbon_combustion_complete.json  carbon_combustion_limited.json  chlorine_water.json  cl2_disproportionation_cold.json  cl2_disproportionation_hot.json  cl2o7_hydrolysis.json  cl2o_hydrolysis.json  clo2_disproportionation.json  co2_dissolution.json  co2_na2o2_reaction.json  co_combustion.json  fluorine_reactions.json  h2_hclo4_redox.json  h2_sulfur_reaction.json  h2co3_naoh_1to1.json  h2co3_naoh_1to2.json  h2o2_decomposition.json  h2o2_hcl_redox.json  h2s_combustion.json  h2so3_naoh_neutralization.json  h2so4_naoh_neutralization.json  h3bo3_dehydration.json  h3bo3_naoh_neutralization.json  h3po4_naoh_neutralization.json  hcl_aq_neutralization.json  hclo2_disproportionation.json  hclo2_neutralization.json  (+42 more)
